--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
-spring.main.banner-mode=off
-logging.level.org.springframework=ERROR
-
-spring.datasource.url=jdbc:mysql://localhost:3306/?user=root
-spring.datasource.username=root
-spring.datasource.password=123456Aa*.2
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+server.port=80
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create
-server.port=8080 
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 
