--- a/src/main/resources/applications.properties
+++ b/src/main/resources/applications.properties
@@ -1,11 +1,7 @@
-spring.main.banner-mode=off
-logging.level.org.springframework=ERROR
-
-spring.datasource.url=jdbc:mysql://localhost:3306/?user=root
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/masterclassr
 spring.datasource.username=root
-spring.datasource.password=123456Aa*.2
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+spring.datasource.password=Qwerty123456!
 spring.jpa.hibernate.ddl-auto=create
-server.port=8080 
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57InnoDBDialect
 
