--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,7 +3,7 @@ logging.level.org.springframework=ERROR
 
 spring.datasource.url=jdbc:mysql://10.0.0.116:3306/Reto3?userSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=*123456Aa*.2
+spring.datasource.password=Caconi64.
 spring.jpa.show-sql= true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
